--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ os: osx
 
 before_install:
 - chmod a+x ./Scripts/install.sh
+- chmod a+x ./Scripts/test.sh
 - chmod a+x ./Scripts/build.sh
 
 install:
